--- a/my-website/index.html
+++ b/my-website/index.html
@@ -26,13 +26,10 @@
 
             /* 多圖拼接 + 接縫 + 重複邊界柔化 */
             background-image:
-                /* 左右接縫與邊界柔化 */
                 linear-gradient(to right, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 10%),
                 linear-gradient(to right, rgba(255,255,255,0) 90%, rgba(255,255,255,0.3) 100%),
-                /* 上下接縫與邊界柔化 */
                 linear-gradient(to bottom, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.2) 10%),
                 linear-gradient(to bottom, rgba(255,255,255,0.2) 90%, rgba(255,255,255,0.3) 100%),
-                /* 真實背景圖 */
                 url('圖片images/背景圖.jpeg'),
                 url('圖片images/背景圖2.jpeg'),
                 url('圖片images/背景圖3.jpeg');
@@ -101,6 +98,24 @@
         .logo {
             height: 50px;
             width: auto;
+        }
+
+        /* 手機版樣式：導覽列改成垂直排列 */
+        @media (max-width: 600px) {
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            nav {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            nav a {
+                margin: 10px 0; /* 每個連結上下間距 */
+            }
         }
     </style>
 </head>
