--- a/my-website/index.html
+++ b/my-website/index.html
@@ -11,20 +11,16 @@
             padding: 0;
             min-height: 100%;
             font-family: sans-serif;
-            position: relative; /* 讓 ::before 以 body 為定位父元素 */
+            position: relative;
         }
 
         /* 背景圖層 */
         body::before {
             content: "";
-            position: absolute;  /* 跟著頁面滾動 */
-            top: 0;
-            left: 0;
-            width: 100%;
-            min-height: 100%;
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; min-height: 100%;
             z-index: -1;
-
-            /* 多圖拼接 + 接縫 + 重複邊界柔化 */
             background-image:
                 linear-gradient(to right, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 10%),
                 linear-gradient(to right, rgba(255,255,255,0) 90%, rgba(255,255,255,0.3) 100%),
@@ -33,12 +29,10 @@
                 url('圖片images/背景圖.jpeg'),
                 url('圖片images/背景圖2.jpeg'),
                 url('圖片images/背景圖3.jpeg');
-
             background-repeat: repeat;
             background-size: auto;
         }
 
-        /* 半透明遮罩加強柔化 */
         body::after {
             content: "";
             position: absolute;
@@ -61,10 +55,34 @@
             z-index: 10;
         }
 
+        .logo {
+            height: 50px;
+            width: auto;
+        }
+
+        nav {
+            display: flex;
+        }
+
         nav a {
             margin-left: 20px;
             text-decoration: none;
             color: #333;
+        }
+
+        /* 漢堡按鈕 */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background-color: #333;
+            margin: 4px 0;
+            transition: 0.3s;
         }
 
         /* Hero 區塊 */
@@ -94,27 +112,31 @@
             margin-top: 40px;
         }
 
-        /* Logo */
-        .logo {
-            height: 50px;
-            width: auto;
-        }
-
-        /* 手機版樣式：導覽列改成垂直排列 */
+        /* 手機版漢堡選單 */
         @media (max-width: 600px) {
-            header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
             nav {
+                position: absolute;
+                top: 70px;
+                left: 0;
                 width: 100%;
-                display: flex;
                 flex-direction: column;
+                background-color: rgba(255,255,255,0.95);
+                max-height: 0;
+                overflow: hidden;
+                transition: max-height 0.3s ease-out;
             }
 
             nav a {
-                margin: 10px 0; /* 每個連結上下間距 */
+                margin: 15px 0;
+                padding: 0 20px;
+            }
+
+            nav.show {
+                max-height: 300px; /* 足夠容納所有選單 */
+            }
+
+            .hamburger {
+                display: flex;
             }
         }
     </style>
@@ -122,7 +144,12 @@
 <body>
     <header>
         <img src="圖片images/logo中文字.png" alt="台灣媳婦切仔麵 Logo" class="logo">
-        <nav>
+        <div class="hamburger" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav id="navMenu">
             <a href="#about">關於我們</a>
             <a href="#products">產品介紹</a>
             <a href="#contact">聯絡我們</a>
@@ -154,5 +181,12 @@
     <footer>
         <p>© 2025 台灣媳婦｜保留所有權利</p>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            const nav = document.getElementById('navMenu');
+            nav.classList.toggle('show');
+        }
+    </script>
 </body>
 </html>
