--- a/my-website/index.html
+++ b/my-website/index.html
@@ -75,13 +75,16 @@
             display: none;
             flex-direction: column;
             cursor: pointer;
+            width: 30px;
+            height: 22px;
+            justify-content: space-between;
         }
 
         .hamburger span {
-            width: 25px;
+            display: block;
             height: 3px;
             background-color: #333;
-            margin: 4px 0;
+            border-radius: 2px;
             transition: 0.3s;
         }
 
@@ -114,6 +117,10 @@
 
         /* 手機版漢堡選單 */
         @media (max-width: 600px) {
+            .hamburger {
+                display: flex;
+            }
+
             nav {
                 position: absolute;
                 top: 70px;
@@ -127,16 +134,22 @@
             }
 
             nav a {
-                margin: 15px 0;
-                padding: 0 20px;
+                margin: 15px 20px;
             }
 
             nav.show {
-                max-height: 300px; /* 足夠容納所有選單 */
+                max-height: 300px; /* 展開高度，可調整 */
             }
 
-            .hamburger {
-                display: flex;
+            /* 漢堡按鈕變成 X */
+            .hamburger.active span:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+            .hamburger.active span:nth-child(2) {
+                opacity: 0;
+            }
+            .hamburger.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(5px, -5px);
             }
         }
     </style>
@@ -144,7 +157,7 @@
 <body>
     <header>
         <img src="圖片images/logo中文字.png" alt="台灣媳婦切仔麵 Logo" class="logo">
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger" onclick="toggleMenu(this)">
             <span></span>
             <span></span>
             <span></span>
@@ -183,9 +196,10 @@
     </footer>
 
     <script>
-        function toggleMenu() {
+        function toggleMenu(button) {
             const nav = document.getElementById('navMenu');
             nav.classList.toggle('show');
+            button.classList.toggle('active');
         }
     </script>
 </body>
