--- a/my-website/index.html
+++ b/my-website/index.html
@@ -70,22 +70,12 @@
             color: #333;
         }
 
-        /* 漢堡按鈕 */
+        /* 漢堡按鈕圖片 */
         .hamburger {
             display: none;
-            flex-direction: column;
+            width: 40px;
+            height: 40px;
             cursor: pointer;
-            width: 30px;
-            height: 22px;
-            justify-content: space-between;
-        }
-
-        .hamburger span {
-            display: block;
-            height: 3px;
-            background-color: #333;
-            border-radius: 2px;
-            transition: 0.3s;
         }
 
         /* Hero 區塊 */
@@ -118,7 +108,7 @@
         /* 手機版漢堡選單 */
         @media (max-width: 600px) {
             .hamburger {
-                display: flex;
+                display: block;
             }
 
             nav {
@@ -140,28 +130,13 @@
             nav.show {
                 max-height: 300px; /* 展開高度，可調整 */
             }
-
-            /* 漢堡按鈕變成 X */
-            .hamburger.active span:nth-child(1) {
-                transform: rotate(45deg) translate(5px, 5px);
-            }
-            .hamburger.active span:nth-child(2) {
-                opacity: 0;
-            }
-            .hamburger.active span:nth-child(3) {
-                transform: rotate(-45deg) translate(5px, -5px);
-            }
         }
     </style>
 </head>
 <body>
     <header>
         <img src="圖片images/logo中文字.png" alt="台灣媳婦切仔麵 Logo" class="logo">
-        <div class="hamburger" onclick="toggleMenu(this)">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        <img src="圖片images/hamburger.png" alt="漢堡選單" class="hamburger" onclick="toggleMenu(this)">
         <nav id="navMenu">
             <a href="#about">關於我們</a>
             <a href="#products">產品介紹</a>
@@ -198,8 +173,14 @@
     <script>
         function toggleMenu(button) {
             const nav = document.getElementById('navMenu');
-            nav.classList.toggle('show');
-            button.classList.toggle('active');
+            nav.classList.toggle('show'); // 展開 / 收合選單
+
+            // 切換漢堡圖 / X 圖
+            if(button.src.includes('hamburger.png')){
+                button.src = '圖片images/叉叉按鈕.png';
+            } else {
+                button.src = '圖片images/漢堡按鈕.png';
+            }
         }
     </script>
 </body>
