--- a/my-website/index.html
+++ b/my-website/index.html
@@ -136,7 +136,7 @@
 <body>
     <header>
         <img src="圖片images/logo中文字.png" alt="台灣媳婦切仔麵 Logo" class="logo">
-        <img src="圖片images/hamburger.png" alt="漢堡選單" class="hamburger" onclick="toggleMenu(this)">
+        <img src="圖片images/漢堡按鈕.png" alt="漢堡選單" class="hamburger" onclick="toggleMenu(this)">
         <nav id="navMenu">
             <a href="#about">關於我們</a>
             <a href="#products">產品介紹</a>
