--- a/my-website/index.html
+++ b/my-website/index.html
@@ -16,15 +16,11 @@
         /* 背景圖層 */
         body::before {
             content: "";
-            position: absolute;
+            position: fixed;
             top: 0; left: 0;
-            width: 100%; min-height: 100%;
-            z-index: -1;
+            width: 100%; height: 100%;
+            z-index: -2;
             background-image:
-                linear-gradient(to right, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 10%),
-                linear-gradient(to right, rgba(255,255,255,0) 90%, rgba(255,255,255,0.3) 100%),
-                linear-gradient(to bottom, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.2) 10%),
-                linear-gradient(to bottom, rgba(255,255,255,0.2) 90%, rgba(255,255,255,0.3) 100%),
                 url('圖片images/背景圖.jpeg'),
                 url('圖片images/背景圖2.jpeg'),
                 url('圖片images/背景圖3.jpeg');
@@ -32,16 +28,17 @@
             background-size: auto;
         }
 
+        /* 背景模糊遮罩 */
         body::after {
             content: "";
-            position: absolute;
+            position: fixed;
             top: 0; left: 0;
             width: 100%; height: 100%;
-            background-color: rgba(255,255,255,0.05);
+            background-color: rgba(255,255,255,0.2);
+            backdrop-filter: blur(8px);
             z-index: -1;
         }
 
-        /* 導覽列 */
         header {
             display: flex;
             justify-content: space-between;
@@ -66,14 +63,12 @@
             cursor: pointer;
         }
 
-        /* Hero 區塊 */
         .hero { height: 70vh; display: flex; justify-content: center; align-items: center; text-align: center; }
         .hero h1 { font-size: 48px; margin: 0; }
 
         section { padding: 60px 20px; max-width: 1000px; margin: auto; }
         footer { text-align: center; padding: 20px; background: #f2f2f2; margin-top: 40px; }
 
-        /* 手機版 */
         @media (max-width: 600px) {
             .hamburger { display: block; }
 
@@ -141,7 +136,6 @@
             const nav = document.getElementById('navMenu');
             nav.classList.toggle('show');
 
-            // 選單展開時顯示叉叉，收合時顯示漢堡
             if(nav.classList.contains('show')){
                 button.src = button.dataset.close;
             } else {
