--- a/my-website/index.html
+++ b/my-website/index.html
@@ -34,7 +34,7 @@
             position: fixed;
             top: 0; left: 0;
             width: 100%; height: 100%;
-            background-color: rgba(255,255,255,0.3);
+            background-color: rgba(255,255,255,0.2);
             backdrop-filter: blur(8px);
             z-index: -1;
         }
@@ -132,6 +132,8 @@
     </footer>
 
     <script>
+        let lastScrollTop = 0;
+
         function toggleMenu(button){
             const nav = document.getElementById('navMenu');
             nav.classList.toggle('show');
@@ -149,6 +151,21 @@
             nav.classList.remove('show');
             button.src = button.dataset.hamburger;
         }
+
+        // 偵測捲動方向，自動收合選單
+        window.addEventListener('scroll', function(){
+            const nav = document.getElementById('navMenu');
+            const button = document.querySelector('.hamburger');
+            let st = window.pageYOffset || document.documentElement.scrollTop;
+
+            if(st > lastScrollTop && nav.classList.contains('show')){
+                // 下滑且選單展開 → 收合
+                nav.classList.remove('show');
+                button.src = button.dataset.hamburger;
+            }
+
+            lastScrollTop = st <= 0 ? 0 : st;
+        }, false);
     </script>
 </body>
 </html>
