--- a/my-website/index.html
+++ b/my-website/index.html
@@ -5,22 +5,27 @@
 <title>台灣媳婦</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-html, body {margin:0; padding:0; min-height:100%; font-family:sans-serif; position:relative;}
+html, body {margin:0; padding:0; min-height:100%; font-family:sans-serif;}
 
-/* 背景 */
+/* 背景圖層，跟著滾動 */
 body::before{
     content:"";
-    position:fixed; top:0; left:0; width:100%; height:100%; z-index:-2;
+    position:absolute; top:0; left:0; width:100%; min-height:100%;
+    z-index:-2;
     background-image: url('圖片images/背景圖.jpeg'), url('圖片images/背景圖2.jpeg'), url('圖片images/背景圖3.jpeg');
-    background-repeat: repeat; background-size: auto;
-}
-body::after{
-    content:"";
-    position:fixed; top:0; left:0; width:100%; height:100%;
-    background-color: rgba(255,255,255,0.2);
-    backdrop-filter: blur(8px); z-index:-1;
+    background-repeat: repeat;
+    background-size: auto;
 }
 
+body::after{
+    content:"";
+    position:absolute; top:0; left:0; width:100%; height:100%;
+    background-color: rgba(255,255,255,0.2);
+    backdrop-filter: blur(8px);
+    z-index:-1;
+}
+
+/* Header */
 header {
     position:fixed; top:0; left:0; width:100%; z-index:10;
     height:70px; transition: top 0.3s ease;
@@ -31,6 +36,7 @@ header {
 .hamburger {
     position:absolute; top:15px; left:20px;
     width:40px; height:40px; cursor:pointer;
+    z-index:11;
 }
 .hamburger img {
     position:absolute; top:0; left:0; width:100%; height:100%;
@@ -46,9 +52,10 @@ header .logo {
     position:absolute; top:50%; left:50%;
     transform: translate(-50%, -50%);
     height:50px;
+    z-index:11;
 }
 
-/* nav 選單 */
+/* nav */
 nav {
     position:absolute; top:70px; left:0; width:100%;
     flex-direction:column; background-color: rgba(255,255,255,0.95);
