--- a/my-website/index.html
+++ b/my-website/index.html
@@ -7,14 +7,15 @@
 <style>
 html, body {margin:0; padding:0; min-height:100%; font-family:sans-serif;}
 
-/* 背景圖層，跟著滾動 */
+/* 背景圖層，覆蓋全頁並跟隨滾動 */
 body::before{
     content:"";
-    position:absolute; top:0; left:0; width:100%; min-height:100%;
+    position:absolute; top:0; left:0; width:100%; height:100%;
     z-index:-2;
     background-image: url('圖片images/背景圖.jpeg'), url('圖片images/背景圖2.jpeg'), url('圖片images/背景圖3.jpeg');
     background-repeat: repeat;
-    background-size: auto;
+    background-size: cover;
+    background-attachment: scroll; /* 跟隨滾動 */
 }
 
 body::after{
@@ -60,7 +61,7 @@ nav {
     position:absolute; top:70px; left:0; width:100%;
     flex-direction:column; background-color: rgba(255,255,255,0.95);
     max-height:0; overflow:hidden; transition:max-height 0.3s ease-out;
-    display:flex; gap:20px;
+    display:flex; gap:20px; z-index:10;
 }
 nav.show { max-height:300px; }
 nav a { margin:15px 20px; text-decoration:none; color:#333; }
