--- a/my-website/index.html
+++ b/my-website/index.html
@@ -12,13 +12,13 @@ html, body {
     font-family:sans-serif;
     min-height:100%;
     position:relative;
-    background-image: url('圖片images/背景圖.jpeg'), url('圖片images/背景圖2.jpeg'), url('圖片images/背景圖3.jpeg');
+    background-image: url('images/background1.jpeg'), url('images/background2.jpeg'), url('images/background3.jpeg');
     background-repeat: repeat;
     background-size: cover;
-    background-attachment: scroll; /* 背景隨內容滾動 */
+    background-attachment: scroll;
 }
 
-/* 模糊半透明遮罩 */
+/* 模糊遮罩 */
 body::after {
     content:"";
     position:absolute;
@@ -29,14 +29,15 @@ body::after {
     z-index:-1;
 }
 
-/* Header */
+/* Header 黑底白字 */
 header {
     position:fixed;
     top:0; left:0;
     width:100%;
     height:70px;
     z-index:10;
-    background-color: rgba(255,255,255,0.8);
+    background-color: #000;
+    color: #fff;
     transition: top 0.3s ease;
 }
 
@@ -64,13 +65,13 @@ header .logo {
     z-index:11;
 }
 
-/* nav */
+/* nav 黑底白字 */
 nav {
     position:absolute;
     top:70px; left:0;
     width:100%;
     flex-direction:column;
-    background-color: rgba(255,255,255,0.95);
+    background-color: rgba(0,0,0,0.95);
     max-height:0;
     overflow:hidden;
     transition:max-height 0.3s ease-out;
@@ -79,7 +80,7 @@ nav {
     z-index:10;
 }
 nav.show { max-height:300px; }
-nav a { margin:15px 20px; text-decoration:none; color:#333; }
+nav a { margin:15px 20px; text-decoration:none; color:#fff; }
 
 /* Hero & 內容 */
 .hero{
@@ -91,16 +92,22 @@ nav a { margin:15px 20px; text-decoration:none; color:#333; }
 }
 .hero h1{font-size:48px; margin:0;}
 section{padding:60px 20px; max-width:1000px; margin:auto;}
-footer{text-align:center; padding:20px; background:#f2f2f2; margin-top:40px;}
+footer{
+    text-align:center;
+    padding:20px;
+    background-color: #000;
+    color: #fff;
+    margin-top:40px;
+}
 </style>
 </head>
 <body>
 <header id="mainHeader">
     <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu()">
-        <img src="圖片images/漢堡按鈕.png" class="hamburger-img" alt="漢堡按鈕">
-        <img src="圖片images/叉叉按鈕.png" class="close" alt="叉叉按鈕">
+        <img src="images/漢堡按鈕.png" class="hamburger-img" alt="漢堡按鈕" onerror="this.src='https://via.placeholder.com/40?text=%E6%BC%A2%E8%85%BF'">
+        <img src="images/叉叉按鈕.png" class="close" alt="叉叉按鈕" onerror="this.src='https://via.placeholder.com/40?text=X'">
     </div>
-    <img src="圖片images/logo中文字.png" class="logo" alt="台灣媳婦 Logo">
+    <img src="images/logo.png" class="logo" alt="台灣媳婦 Logo" onerror="this.src='https://via.placeholder.com/150x50?text=Logo'">
     <nav id="navMenu">
         <a href="#about" onclick="closeMenu()">關於我們</a>
         <a href="#products" onclick="closeMenu()">產品介紹</a>
