--- a/my-website/index.html
+++ b/my-website/index.html
@@ -104,8 +104,8 @@ footer{
 <body>
 <header id="mainHeader">
     <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu()">
-        <img src="圖片images/漢堡按鈕.png" class="hamburger-img" alt="漢堡按鈕" onerror="this.src='https://via.placeholder.com/40?text=%E6%BC%A2%E8%85%BF'">
-        <img src="圖片images/叉叉按鈕.png" class="close" alt="叉叉按鈕" onerror="this.src='https://via.placeholder.com/40?text=X'">
+        <img src="圖片images/hamburger.png" class="hamburger-img" alt="漢堡按鈕" onerror="this.src='https://via.placeholder.com/40?text=%E6%BC%A2%E8%85%BF'">
+        <img src="圖片images/close.png" class="close" alt="叉叉按鈕" onerror="this.src='https://via.placeholder.com/40?text=X'">
     </div>
     <img src="圖片images/logo中文字.png" class="logo" alt="台灣媳婦 Logo" onerror="this.src='https://via.placeholder.com/150x50?text=Logo'">
     <nav id="navMenu">
