--- a/my-website/index.html
+++ b/my-website/index.html
@@ -12,7 +12,7 @@ html, body {
     font-family:sans-serif;
     min-height:100%;
     position:relative;
-    background-image: url('images/background1.jpeg'), url('images/background2.jpeg'), url('images/background3.jpeg');
+    background-image: url('圖片images/背景圖.jpeg'), url('圖片images/背景圖2.jpeg'), url('圖片images/背景圖3.jpeg');
     background-repeat: repeat;
     background-size: cover;
     background-attachment: scroll;
