--- a/my-website/index.html
+++ b/my-website/index.html
@@ -36,8 +36,8 @@ header {
     width:100%;
     height:70px;
     z-index:10;
-    background-color: #000;
-    color: #fff;
+    background-color: rgba(255,255,255,0.7);
+    color: #333;
     transition: top 0.3s ease;
 }
 
