--- a/my-website/index.html
+++ b/my-website/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>台灣媳婦</title>
+<title>臺灣媳婦</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 /* 基本設定 */
@@ -107,7 +107,7 @@ footer{
         <img src="圖片images/hamburger.png" class="hamburger-img" alt="漢堡按鈕" onerror="this.src='https://via.placeholder.com/40?text=%E6%BC%A2%E8%85%BF'">
         <img src="圖片images/close.png" class="close" alt="叉叉按鈕" onerror="this.src='https://via.placeholder.com/40?text=X'">
     </div>
-    <img src="圖片images/logo中文字.png" class="logo" alt="台灣媳婦 Logo" onerror="this.src='https://via.placeholder.com/150x50?text=Logo'">
+    <img src="圖片images/logo中文字.png" class="logo" alt="臺灣媳婦 Logo" onerror="this.src='https://via.placeholder.com/150x50?text=Logo'">
     <nav id="navMenu">
         <a href="#about" onclick="closeMenu()">關於我們</a>
         <a href="#products" onclick="closeMenu()">產品介紹</a>
@@ -116,17 +116,17 @@ footer{
 </header>
 
 <section class="hero">
-    <div><h1>台灣媳婦</h1><p>傳承在地味道，溫暖每一道料理</p></div>
+    <div><h1>臺灣媳婦</h1><p>傳承在地味道，溫暖每一道料理</p></div>
 </section>
 
 <section id="about">
 <h2>關於我們</h2>
-<p>「台灣媳婦」源自台灣在地美食文化，致力於傳遞手作風味與家的溫度。我們堅持選用天然食材，結合傳統工法與現代品質，用最道地的方式陪伴每一個家庭的餐桌。</p>
+<p>「臺灣媳婦」源自台灣在地美食文化，致力於傳遞手作風味與家的溫度。我們堅持選用天然食材，結合傳統工法與現代品質，用最道地的方式陪伴每一個家庭的餐桌。</p>
 </section>
 
 <section id="products">
 <h2>產品介紹</h2>
-<p>我們提供各式台灣傳統料理、調理包、伴手禮及特色美食，未來此區可加入產品圖片與簡介。</p>
+<p>我們提供各式臺灣傳統料理、調理包、伴手禮及特色美食，未來此區可加入產品圖片與簡介。</p>
 </section>
 
 <section id="contact">
@@ -135,7 +135,7 @@ footer{
 </section>
 
 <footer>
-<p>© 2025 台灣媳婦｜保留所有權利</p>
+<p>© 2025 臺灣媳婦｜保留所有權利</p>
 </footer>
 
 <script>
