--- a/my-website/index.html
+++ b/my-website/index.html
@@ -110,8 +110,8 @@ footer{
 <body>
 <header id="mainHeader">
     <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu()">
-        <img src="圖片images/漢堡按鈕.png" class="hamburger-img" alt="漢堡按鈕">
-        <img src="圖片images/叉叉按鈕.png" class="close" alt="叉叉按鈕">
+        <img src="圖片images/hamburger.png" class="hamburger-img" alt="漢堡按鈕">
+        <img src="圖片images/close.png" class="close" alt="叉叉按鈕">
     </div>
     <img src="圖片images/logo中文字.png" class="logo" alt="臺灣媳婦 Logo">
     <nav id="navMenu">
