--- a/my-website/index.html
+++ b/my-website/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>臺灣媳婦</title>
+<title>台灣媳婦</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 /* 載入王羲之字體 */
@@ -113,7 +113,7 @@ footer{
         <img src="圖片images/hamburger.png" class="hamburger-img" alt="漢堡按鈕">
         <img src="圖片images/close.png" class="close" alt="叉叉按鈕">
     </div>
-    <img src="圖片images/logo中文字.png" class="logo" alt="臺灣媳婦 Logo">
+    <img src="圖片images/logo中文字.png" class="logo" alt="台灣媳婦 Logo">
     <nav id="navMenu">
         <a href="#about" onclick="closeMenu()">關於我們</a>
         <a href="#products" onclick="closeMenu()">產品介紹</a>
@@ -122,12 +122,12 @@ footer{
 </header>
 
 <section class="hero">
-    <div><h1>臺灣媳婦</h1><p>傳承在地味道，溫暖每一道料理</p></div>
+    <div><h1>台灣媳婦</h1><p>傳承在地味道，溫暖每一道料理</p></div>
 </section>
 
 <section id="about">
 <h2>關於我們</h2>
-<p>「臺灣媳婦」源自台灣在地美食文化，致力於傳遞手作風味與家的溫度。我們堅持選用天然食材，結合傳統工法與現代品質，用最道地的方式陪伴每一個家庭的餐桌。</p>
+<p>「台灣媳婦」源自台灣在地美食文化，致力於傳遞手作風味與家的溫度。我們堅持選用天然食材，結合傳統工法與現代品質，用最道地的方式陪伴每一個家庭的餐桌。</p>
 </section>
 
 <section id="products">
@@ -141,7 +141,7 @@ footer{
 </section>
 
 <footer>
-<p>© 2025 臺灣媳婦｜保留所有權利</p>
+<p>© 2025 台灣媳婦｜保留所有權利</p>
 </footer>
 
 <script>
