--- a/my-website/index.html
+++ b/my-website/index.html
@@ -117,6 +117,8 @@ footer{
     <nav id="navMenu">
         <a href="#about" onclick="closeMenu()">關於我們</a>
         <a href="#products" onclick="closeMenu()">產品介紹</a>
+        <a href="#menu" onclick="closeMenu()">菜單</a>
+        <a href="#response" onclick="closeMenu()">回饋表單</a>
         <a href="#contact" onclick="closeMenu()">聯絡我們</a>
     </nav>
 </header>
@@ -134,12 +136,22 @@ footer{
 <h2>產品介紹</h2>
 <p>我們提供各式臺灣傳統料理、調理包、伴手禮及特色美食，未來此區可加入產品圖片與簡介。</p>
 </section>
+    
+<section id="menu">
+<h2>菜單</h2>
+<p>菜單內容</p>
+</section>
+
+<section id="response">
+<h2>回饋表單</h2>
+<p>回饋表單連結:</p>
+</section>
 
 <section id="contact">
 <h2>聯絡我們</h2>
 <p>Email：example@mail.com<br>電話：(02)2759-8202<br>地址：台北市信義區松德路215號</p>
 </section>
-
+    
 <footer>
 <p>© 2025 台灣媳婦｜保留所有權利</p>
 </footer>
